objects/Bypass_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Is_Contact_Address_Trigger_Bypassed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Contact Address Trigger Bypassed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Contact_Address_Validation_Bypassed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Contact Address Validation Bypassed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Contact_Address_Workflow_Bypassed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Contact Address Workflow Bypassed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Contact_Trigger_Bypassed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Contact Trigger Bypassed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Contact_Validation_Rule_Bypassed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Contact Validation Rule Bypassed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Contact_Worflow_Bypassed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Contact Worflow Bypassed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Platform_Event_Log_Bypassed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this check box if you want logging to be disabled</description>
        <label>Is Platform Event Log Bypassed?</label>
        <type>Checkbox</type>
    </fields>
    <label>Bypass Settings</label>
</CustomObject>